syntax = "proto3";

package go.micro.srv.PostOrders;

service Example {
	rpc PostOrders(Request) returns (Response) {}
}

message Message {
	string say = 1;
}

message Request {
	string SessionId = 1;
	bytes Body = 2;
}

message Response {
	string Error = 1;
	string Errmsg = 2;
	string Order_id = 3;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
